--- a/examples/Iris/index.html
+++ b/examples/Iris/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Iris Example</title>
     <script src="../../node_modules/p5/lib/p5.min.js"></script>
-    <script src="../../dist/p5.dataframe.js"></script>
+    <script src="../../dist/p5.tidy.js"></script>
     <script src="sketch.js"></script>
   </head>
   <body>
