--- a/examples/mauna-loa/index.html
+++ b/examples/mauna-loa/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>CO2 Example</title>
+    <title>Mauna Loa Example</title>
     <script src="../../node_modules/p5/lib/p5.min.js"></script>
     <script src="../../dist/p5.tidy.js"></script>
     <script src="sketch.js"></script>
